--- a/src/app/modules/auth/login/login.component.html
+++ b/src/app/modules/auth/login/login.component.html
@@ -1,36 +1,36 @@
-<div class="flex h-screen">
-    <div class="w-1/2 flex flex-col gap-3 justify-center items-center">
-        <h1 class="text-[#2B3674] text-lg mb-3">Branch Login</h1>
+<div class="flex flex-col items-center sm:md:flex-row h-screen ">
+    <div class="w-1/2 flex flex-col gap-3 justify-center items-center ">
+        <span class="text-[#2B3674] text-5xl font-bold mb-3">Branch Login</span>
         <form action="">
-            <div class="flex flex-col gap-3 w-64 ">
+            <div class="flex flex-col gap-3 w-80 ">
                 <select name="" id="">
                     <option value="">select your branch</option>
                 </select>
                 <div>
                     <label for="email" class="block text-sm/6 font-medium text-gray-900">Email*</label>
                     <div class="mt-2">
-                        <input type="text" placeholder="mail@simmmple.com" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm/6">
+                        <input type="text" placeholder="mail@simmmple.com" class="block w-full px-3 rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm/6">
                     </div>
                 </div>
     
-                <div class="flex flex-col">
+                <div class="flex flex-col h-3">
                     <label for="password" class="block text-sm/6 font-medium text-gray-900">Password*</label>
                     <div class="mt-2">
-                        <input type="password" placeholder="*******" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm/6">
+                        <input type="password" placeholder="*******" class="block w-full px-3 rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm/6">
                     </div>
                 </div>
     
-                <div class="mt-10 text-center text-sm/6 text-white"><button class="bg-[#4318FF] border w-36 p-3 rounded-lg">Login</button></div>
+                <div class="mt-10 text-center text-sm/6 text-white"><button class="bg-[#4318FF] border w-36 p-3 rounded-lg mt-3">Login</button></div>
             </div>
             </form>
             
     </div>
-    <div class="w-1/2 ">
+    <div class="w-1/2 mt-5">
         <div class="bg-[#4318FF] h-full w-[90%] float-right rounded-bl-[20%] text-center content-center ">
             <div class="w-full content-center">
                 <img src="assets/light.png" class="w-96 ml-auto mr-auto" alt="light">
             </div>
-            <span class="text-6xl text-[#B3B7FA]">WattWise</span>
+            <span class="text-4xl sm:text-6xl text-[#B3B7FA]">WattWise</span>
         </div>
        
     </div>
